...
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/input_nb_choices"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/nb_choice"
                    android:imeActionId="@+id/candidat_next"
                    android:imeActionLabel="candidat_next"
                    android:inputType="number"
...
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/input_candidat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/candidate"
                    android:imeActionId="@+id/candidat_vote_done"
                    android:imeActionLabel="candidat_vote_done"
                    android:inputType="text"
...
