<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_next_arrow"
        android:icon="@drawable/ic_arrow_next"
        android:title="@string/menu_item_next_arrow"
        app:showAsAction="ifRoom"
        android:orderInCategory="100"/>
</menu>