<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="error_invalid_email">L\'adresse e-mail n\'est pas valide</string>
    <string name="error_invalid_password">Le mot de passe est trop court</string>
    <string name="error_incorrect_password">Le mot de passe est incorrect</string>
    <string name="error_field_required">Champ requis</string>
    <string name="error_not_matching_password">Le mot de passe n\'est pas le même</string>
    <string name="date_picker_error_invalid">Date invalide</string>
    <string name="time_picker_error_invalid">Temps invalide</string>
</resources>