<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <pm12016g3.tln.univ.fr.vot.utilities.views.custom.LifelineView_
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/lifelineView"
        app:stepRadius="15dp"
        app:steps="4"
        app:stepDefaultColor="@color/vot_gray"
        app:stepSelectedColor="@color/vot_orange_dark"
        app:lineColor="@color/vot_orange"
        app:lineThickness="6" />


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mainCreateContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="pm12016g3.tln.univ.fr.vot.features.MainActivity_"
        tools:showIn="@layout/main_app_bar_main">


    </RelativeLayout>

</LinearLayout>